# srtlog

./: .gitattributes  README.md  pyproject.toml
.github/workflows/: ci.yml
src/srtlog/: __init__.py  cache_manager.py  engine.py  log_parser.py  models.py
src/srtlog/cli/: __init__.py  main.py  parse.py  time_breakdown.py  viz.py
tests/: __init__.py  conftest.py  test_cli.py  test_engine.py  test_log_parser.py  test_models.py
tests/fixtures/4401453/: 4401453.json  config.yaml  sbatch_script.sh
tests/fixtures/4401453/logs/: benchmark.out  eos0001_agg_w0.out  eos0001_agg_w1.out  eos0001_agg_w2.out  eos0001_agg_w3.out  eos0001_frontend_0.out  eos0222_agg_w4.out  eos0222_agg_w5.out  eos0222_agg_w6.out  eos0222_agg_w7.out  log.out
tests/fixtures/4401453/logs/artifacts/Qwen3-32B_conversation_20251229_154513/: profile_export.jsonl  profile_export_aiperf.csv  profile_export_aiperf.json
tests/fixtures/4401453/logs/cached_assets/: cache_metadata.json  node_metrics.parquet
tests/fixtures/4401453/logs/traces/: conversation_trace.jsonl
tests/fixtures/4401463/logs/: eos0234_prefill_w0.out  eos0234_prefill_w1.out  eos0250_decode_w0.out
tests/fixtures/4401463/logs/cached_assets/: cache_metadata.json  node_metrics.parquet
